syntax = "proto3";

package Transidious.Serialization;
option csharp_namespace = "Transidious.Serialization";

import "Common.proto";

message IntersectionPattern {
    enum Type {
        TwoWayByTwoWay = 0;
        DoubleOneWayByTwoWay = 1;
        DoubleOneWayByDoubleOneWay = 2;
    }

    int32 ID = 1;
    Type type = 2;
    repeated int32 segmentIDs = 3;
}

message StreetIntersection {
    MapObject mapObject = 1;
    Vector2 position = 2;
    int32 patternID = 3;
}

message TrafficLight {
    int32 ID = 1;
    int32 status = 2;
    float timeToNextSwitch = 3;
    float redTime = 4;
    int32 greenPhase = 5;
}

message StreetSegment {
    MapObject mapObject = 1;
    repeated Vector2 positions = 2;
    uint32 startIntersectionID = 3;
    uint32 endIntersectionID = 4;
    bool hasTramTracks = 5;
    int32 occupiedParkingSpots = 6;
    int32 startTrafficLightID = 7;
    int32 endTrafficLightID = 8;
    int32 flags = 9;
}

message Street {
    enum Type {
        Primary = 0;
        Secondary = 1;
        Tertiary = 2;
        Residential = 3;
        Link = 4;
        Path = 5;
        River = 6;
    }

    MapObject mapObject = 1;
    string displayName = 2;
    Type type = 3;
    repeated StreetSegment segments = 4;
    bool lit = 5;
    bool oneway = 6;
    uint32 maxspeed = 7;
    uint32 lanes = 8;
}